cbsa code match found

--- a/dataset/acs_data_fetch.ipynb
+++ b/dataset/acs_data_fetch.ipynb
@@ -486,23 +486,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "id": "3cd09e6e-3d37-41bb-81b5-a6a165d74196",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(518, 35)"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Anniston-Oxford, AL', 'Auburn-Opelika, AL', 'Birmingham-Hoover, AL', 'Columbus, GA-AL', 'Daphne-Fairhope-Foley, AL', 'Decatur, AL', 'Dothan, AL', 'Florence-Muscle Shoals, AL', 'Gadsden, AL', 'Huntsville, AL', 'Mobile, AL', 'Montgomery, AL', 'Tuscaloosa, AL']\n"
+     ]
     }
    ],
    "source": [
-    "df.shape\n"
+    "cities = df['NAME']\n",
+    "alabama = [i.replace(' Metro Area', '') for i in cities if 'AL' in i and 'Metro Area' in i]\n",
+    "print(alabama)"
    ]
   },
   {
