socio economic data fetch complete from 2010-2019

--- a/dataset/epa_data_fetch.ipynb
+++ b/dataset/epa_data_fetch.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "aeccf27f-512b-4d1d-94a9-4b6b162d6e51",
    "metadata": {},
    "outputs": [],
@@ -146,33 +146,38 @@
     "remove = ['local_site_name', 'state_code', 'county_code', 'event_type', 'site_number', 'parameter_code', 'poc', 'pollutant_standard', 'method', 'event-type', 'observation_percent', 'required_day_count', 'exceptional_data_count', 'primary_exceedance_count', 'secondary_exceedance_count', 'certification_indicator', 'first_max_nonoverlap_value', 'first_max_n_o_datetime', 'second_max_nonoverlap_value', 'second_max_n_o_datetime', 'site_address', 'cbsa', 'date_of_last_change']\n",
     "features = [col for col in df.columns if col not in remove]\n",
     "\n",
-    "df[features].to_csv('raw_epa.csv', index=False)"
+    "df[features].to_csv('epa_pollution.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "0e152b9e-06ce-45dc-aaf8-104c7ef6d289",
+   "execution_count": 27,
+   "id": "05bed114-0e86-4303-8b34-9b4bbf8f9b72",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([33.565278, 33.499722, 33.529444, 33.553056, 34.530717, 30.497478,\n",
-       "       33.545278, 33.904039, 30.474305, 30.770181, 31.188933, 33.485556,\n",
-       "       33.386389, 34.687761, 32.412811, 34.342904, 34.762619, 32.472136,\n",
-       "       33.089772, 32.498567, 33.317142, 32.46735 , 33.704722, 34.289001,\n",
-       "       33.578333, 33.459722, 32.36401 , 33.331111, 33.801667])"
+       "(159367, 55)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "read = pd.read_csv('raw_epa.csv')\n",
-    "read['latitude'].unique()"
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "0e152b9e-06ce-45dc-aaf8-104c7ef6d289",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "read = pd.read_csv('raw_epa.csv')"
    ]
   },
   {
