variable search for education attainment complete

--- a/dataset/acs_data_fetch.ipynb
+++ b/dataset/acs_data_fetch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "id": "52c116f4-5de6-43b1-b654-701c105db3ac",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 3,
    "id": "ebbf64f7-8631-4f5f-ac08-d4184f1a4479",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 4,
    "id": "43b015f9-efb2-428a-84f4-665fbdcc121b",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 5,
    "id": "601f2620-de22-4fb6-bfa6-a2267169c10d",
    "metadata": {},
    "outputs": [
@@ -71,19 +71,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!Less than 9th grade\n",
-      "Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!9th to 12th grade, no diploma\n",
-      "Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 18 to 24 years!!Bachelor's degree or higher\n",
-      "Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 18 to 24 years!!High school graduate (includes equivalency)\n",
-      "Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 18 to 24 years!!Some college or associate's degree\n",
-      "Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 18 to 24 years!!Less than high school graduate\n",
-      "Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!High school graduate (includes equivalency)\n",
-      "Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!Bachelor's degree or higher\n",
-      "Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!Graduate or professional degree\n",
-      "Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!High school graduate or higher\n",
-      "Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!Associate's degree\n",
-      "Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!Bachelor's degree\n",
-      "Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!Some college, no degree\n",
+      "S1501_C02_007E Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!Less than 9th grade\n",
+      "S1501_C02_008E Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!9th to 12th grade, no diploma\n",
+      "S1501_C02_005E Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 18 to 24 years!!Bachelor's degree or higher\n",
+      "S1501_C02_003E Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 18 to 24 years!!High school graduate (includes equivalency)\n",
+      "S1501_C02_004E Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 18 to 24 years!!Some college or associate's degree\n",
+      "S1501_C02_002E Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 18 to 24 years!!Less than high school graduate\n",
+      "S1501_C02_009E Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!High school graduate (includes equivalency)\n",
+      "S1501_C02_015E Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!Bachelor's degree or higher\n",
+      "S1501_C02_013E Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!Graduate or professional degree\n",
+      "S1501_C02_014E Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!High school graduate or higher\n",
+      "S1501_C02_011E Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!Associate's degree\n",
+      "S1501_C02_012E Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!Bachelor's degree\n",
+      "S1501_C02_010E Estimate!!Percent!!AGE BY EDUCATIONAL ATTAINMENT!!Population 25 years and over!!Some college, no degree\n",
       "13\n"
      ]
     }
@@ -95,7 +95,7 @@
     "    edu_str = re.compile('^estimate!!percent!!age by educational attainment!!.+(18 to 24|25 years).+!!')  #regex for educational attainment\n",
     "    if bool(re.match(edu_str, variables[var]['label'].lower())):\n",
     "        education.append(var)\n",
-    "        print(variables[var]['label'])\n",
+    "        print(var, variables[var]['label'])\n",
     "print(len(education))"
    ]
   },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 6,
    "id": "bdc31baa-dba8-4fdc-85c1-47553b71674a",
    "metadata": {},
    "outputs": [
@@ -127,18 +127,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimate!!Percent Female!!Civilian employed population 16 years and over!!Natural resources, construction, and maintenance occupations:\n",
-      "Estimate!!Percent Female!!Civilian employed population 16 years and over!!Sales and office occupations:\n",
-      "Estimate!!Percent Female!!Civilian employed population 16 years and over!!Production, transportation, and material moving occupations:\n",
-      "Estimate!!Percent Female!!Civilian employed population 16 years and over!!Service occupations:\n",
-      "Estimate!!Percent Female!!Civilian employed population 16 years and over\n",
-      "Estimate!!Percent Female!!Civilian employed population 16 years and over!!Management, business, science, and arts occupations:\n",
-      "Estimate!!Percent Male!!Civilian employed population 16 years and over\n",
-      "Estimate!!Percent Male!!Civilian employed population 16 years and over!!Management, business, science, and arts occupations:\n",
-      "Estimate!!Percent Male!!Civilian employed population 16 years and over!!Production, transportation, and material moving occupations:\n",
-      "Estimate!!Percent Male!!Civilian employed population 16 years and over!!Service occupations:\n",
-      "Estimate!!Percent Male!!Civilian employed population 16 years and over!!Sales and office occupations:\n",
-      "Estimate!!Percent Male!!Civilian employed population 16 years and over!!Natural resources, construction, and maintenance occupations:\n",
+      "S2401_C05_029E Estimate!!Percent Female!!Civilian employed population 16 years and over!!Natural resources, construction, and maintenance occupations:\n",
+      "S2401_C05_026E Estimate!!Percent Female!!Civilian employed population 16 years and over!!Sales and office occupations:\n",
+      "S2401_C05_033E Estimate!!Percent Female!!Civilian employed population 16 years and over!!Production, transportation, and material moving occupations:\n",
+      "S2401_C05_018E Estimate!!Percent Female!!Civilian employed population 16 years and over!!Service occupations:\n",
+      "S2401_C05_001E Estimate!!Percent Female!!Civilian employed population 16 years and over\n",
+      "S2401_C05_002E Estimate!!Percent Female!!Civilian employed population 16 years and over!!Management, business, science, and arts occupations:\n",
+      "S2401_C03_001E Estimate!!Percent Male!!Civilian employed population 16 years and over\n",
+      "S2401_C03_002E Estimate!!Percent Male!!Civilian employed population 16 years and over!!Management, business, science, and arts occupations:\n",
+      "S2401_C03_033E Estimate!!Percent Male!!Civilian employed population 16 years and over!!Production, transportation, and material moving occupations:\n",
+      "S2401_C03_018E Estimate!!Percent Male!!Civilian employed population 16 years and over!!Service occupations:\n",
+      "S2401_C03_026E Estimate!!Percent Male!!Civilian employed population 16 years and over!!Sales and office occupations:\n",
+      "S2401_C03_029E Estimate!!Percent Male!!Civilian employed population 16 years and over!!Natural resources, construction, and maintenance occupations:\n",
       "12\n"
      ]
     }
@@ -153,7 +153,7 @@
     "    # if (edu_str.lower() in variables[var]['label'].lower()) and (cat_str.lower() in variables[var]['concept'].lower()) and (':!!' not in variables[var]['label']):\n",
     "    if bool(re.match(occupation_re, variables[var]['label'].lower())) and (cat_str.lower() in variables[var]['concept'].lower()) and (':!!' not in variables[var]['label']):\n",
     "        occupation.append(var)\n",
-    "        print(variables[var]['label'])\n",
+    "        print(var, variables[var]['label'])\n",
     "print(len(occupation))"
    ]
   },
