data clean up completed for both acs and epa datasets

--- a/dataset/acs_data_fetch.ipynb
+++ b/dataset/acs_data_fetch.ipynb
@@ -633,8 +633,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4e723948-1bd7-4a47-a739-4abc7967c569",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"census_acs.csv\")\n",
+    "df.sort_values([\"year\", \"cbsa_code\"], axis=0, inplace=True)\n",
+    "df.drop(\"Unnamed: 0\", axis=1, inplace=True)\n",
+    "df.to_csv(\"census_acs.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c619d9d-7944-458f-98ee-8b56ae146a85",
    "metadata": {},
    "outputs": [],
    "source": []
