clustered datasets stored

--- a/scripts/clustering_analysis.ipynb
+++ b/scripts/clustering_analysis.ipynb
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "1fe9eab8-9763-4d28-b243-e73498c6b163",
    "metadata": {},
    "outputs": [],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "083b805e-f575-4832-8862-59786334eae6",
    "metadata": {
     "tags": []
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "b3adab3c-f290-4a25-a9a1-f37577fe4b1e",
    "metadata": {},
    "outputs": [],
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "60d913d0-0646-4b4d-8dca-18ea1b20cb3b",
    "metadata": {
     "tags": []
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "aacf69dd-d763-45ba-9e09-597fa44ea85c",
    "metadata": {},
    "outputs": [],
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "a3af6466-463b-4b9f-aef1-84404b68df2b",
    "metadata": {},
    "outputs": [],
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "14d9a67a-eff6-42f0-94eb-507e5b5aafc9",
    "metadata": {},
    "outputs": [
@@ -628,7 +628,7 @@
        "(5085, 10)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "b47b5862-1010-43fa-ac5c-dcc1e7e3a11e",
    "metadata": {},
    "outputs": [
@@ -677,7 +677,8 @@
    "source": [
     "kmm = cluster.KMeans(n_clusters=5, random_state=27)\n",
     "kmm.fit_predict(reduced_epa.drop(columns=['year', 'cbsa_code']))\n",
-    "reduced_epa['cluster'] = kmm.labels_"
+    "reduced_epa['cluster'] = kmm.labels_\n",
+    "reduced_epa.to_csv('../dataset/epa_aqi_clustered.csv', index=False)"
    ]
   },
   {
@@ -690,14 +691,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "3e6c1923-7253-4e43-8388-12a680f84b0b",
    "metadata": {},
    "outputs": [],
    "source": [
     "kmm = cluster.KMeans(n_clusters=5, random_state=27)\n",
     "kmm.fit_predict(aqi_report.drop(columns=['year', 'cbsa_code']))\n",
-    "aqi_report['cluster'] = kmm.labels_"
+    "aqi_report['cluster'] = kmm.labels_\n",
+    "aqi_report.to_csv('../dataset/aqi_clustered.csv', index=False)"
    ]
   },
   {
@@ -712,14 +714,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "aea60ec6-36af-4b42-908c-3f3f35099bee",
    "metadata": {},
    "outputs": [],
    "source": [
     "kmm = cluster.KMeans(n_clusters=5, random_state=27)\n",
     "kmm.fit_predict(soc_econ_df.drop(columns=['year', 'cbsa_code']))\n",
-    "soc_econ['cluster'] = kmm.labels_"
+    "soc_econ['cluster'] = kmm.labels_\n",
+    "soc_econ.to_csv('../dataset/soc_econ_clustered.csv', index=False)"
    ]
   },
   {
