Code cleanup and Improved Documentation

--- a/dataset/variable_search.ipynb
+++ b/dataset/variable_search.ipynb
@@ -16,6 +16,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c4f554ed-76f0-443e-b226-ec7bf92def6a",
+   "metadata": {},
+   "source": [
+    "## Explore all the ACS Variables and Determine the Appropriate Variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44bc491d-51d5-4718-99ad-691791ca6d4a",
+   "metadata": {},
+   "source": [
+    "#### This is simply an exploratory script. There is a significant amount of variety in the ACS variables, as they change every couple years. In additon, there are different levels of specification for the Occupation, Education, and Income categories."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d22f47eb-9470-4653-90a0-3086db533490",
+   "metadata": {},
+   "source": [
+    "### Set-up EPA API requests"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ff1e80d3-7930-4b4c-86c2-070ce3ea28b8",
@@ -23,6 +47,7 @@
    "outputs": [],
    "source": [
     "def get_request(endpoint, parameters=dict()):\n",
+    "    '''Build and request an ACS GET endpoint with the appropriate parameters'''\n",
     "    api_url = 'https://api.census.gov/data/'\n",
     "    response = requests.get(api_url + endpoint, parameters)\n",
     "    if response.status_code != 200:\n",
@@ -1926,7 +1951,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
