--- a/dataset/acs_data_fetch.ipynb
+++ b/dataset/acs_data_fetch.ipynb
@@ -16,6 +16,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "58d3a6be-f7d0-4ad2-ad33-de1ffdec1880",
+   "metadata": {},
+   "source": [
+    "### Set-up EPA API requests"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "5a958cd7-1fc2-4180-8cd2-b34bf3ff3e73",
@@ -23,6 +31,7 @@
    "outputs": [],
    "source": [
     "def get_request(endpoint, parameters=dict()):\n",
+    "    '''Build and request an ACS GET endpoint with the appropriate parameters'''\n",
     "    api_url = 'https://api.census.gov/data/'\n",
     "    response = requests.get(api_url + endpoint, parameters)\n",
     "    if response.status_code != 200:\n",
@@ -37,7 +46,7 @@
    "id": "d177f361-14ba-4a17-a51e-7b6112beff15",
    "metadata": {},
    "source": [
-    "### Retrieve a list of variables"
+    "### Retrieve a list of ACS variables"
    ]
   },
   {
@@ -47,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Retrieve l variables (parameters for api)\n",
+    "## Retrieve variables (parameters for api)\n",
     "url ='/acs/acs1/variables.json'\n",
     "response = get_request(str(2019) + url)\n",
     "variables = response['variables']"
@@ -58,7 +67,7 @@
    "id": "b9e8d107-3856-4f4a-8e22-4e16004788f9",
    "metadata": {},
    "source": [
-    "### Declare the variables for each soicoeconomic category"
+    "### Variables for each soicoeconomic category"
    ]
   },
   {
@@ -88,6 +97,14 @@
     "total_labels = {\"B07009_001E\":\"Education_Total\",\n",
     "                \"B19001_001E\":\"Income_Total\",\n",
     "                \"C24050_001E\":\"Occupation_Total\"}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dcbfffc-3382-4ca9-a776-f10fd1b7769e",
+   "metadata": {},
+   "source": [
+    "### Iterate through and request CSV data for each of the required education, income, and occupation variables"
    ]
   },
   {
@@ -669,7 +686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
